--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@ ALR Consulting Group
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
+						<h1>ALR Consulting Group</h1>
 						<p>Your Partner in Digital Transformation</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -225,4 +224,5 @@ ALR Consulting Group
 	</body>
 
 </html>
+
 
