--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@ ALR Consulting Group
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">ALR Consulting Group</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
+							<li class="active"><a href="index.html">ALR Consulting Group</a></li>
+							<!--<li><a href="generic.html">Generic Page</a></li> -->
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
@@ -51,8 +51,7 @@ ALR Consulting Group
 							<article class="post featured">
 								<header class="major">
 									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
+									<h2><a href="#">ALR Consulting Group</h2>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
 									amet nullam sed etiam veroeros.</p>
@@ -224,5 +223,6 @@ ALR Consulting Group
 	</body>
 
 </html>
+
 
 
