--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ ALR Consulting Group
 						<ul class="links">
 							<li class="active"><a href="index.html">ALR Consulting Group</a></li>
 							<!--<li><a href="generic.html">Generic Page</a></li> -->
-							<li><a href="elements.html">Elements Reference</a></li>
+							<!--<li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -52,9 +52,7 @@ ALR Consulting Group
 								<header class="major">
 									<span class="date">April 25, 2017</span>
 									<h2><a href="#">ALR Consulting Group</h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>Your Partner In Digital Transformation.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -223,6 +221,7 @@ ALR Consulting Group
 	</body>
 
 </html>
+
 
 
 
