--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ ALR Consulting Group
 										<h2><a href="#">About Us<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<!--<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
@@ -76,7 +76,7 @@ ALR Consulting Group
 								</article>
 								<article>
 									<header>
-										<!--<span class="date">April 22, 2017</span> -->
+										<!--<span class="date">April 22, 2017</span> 
 										<h2><a href="#">Primis eget<br />
 										imperdiet lorem</a></h2>
 									</header>
@@ -88,7 +88,7 @@ ALR Consulting Group
 								</article>
 								<article>
 									<header>
-										<!--<span class="date">April 18, 2017</span>-->
+										<!--<span class="date">April 18, 2017</span>
 										<h2><a href="#">Ante mattis<br />
 										interdum dolor</a></h2>
 									</header>
@@ -225,6 +225,7 @@ ALR Consulting Group
 	</body>
 
 </html>
+
 
 
 
