--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ ALR Consulting Group
 				<!-- Header -->
 					<header id="header">
 						<a href="index.html" class="logo">ALR Consulting Group</a>
-						<img src="ALR Consulting Group logo design.png" alt="ALR Consulting Group Logo" class="logo">
+						<!--<img src="ALR Consulting Group logo design.png" alt="ALR Consulting Group Logo" class="logo">-->
 					</header>
 
 				<!-- Nav -->
@@ -184,8 +184,7 @@ ALR Consulting Group
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1203 New Haven CT<br />
-								Roswell, GA 30075</p>
+								<p>Roswell, GA 30075</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
@@ -226,6 +225,7 @@ ALR Consulting Group
 	</body>
 
 </html>
+
 
 
 
