--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ ALR Consulting Group
 				<!-- Header -->
 					<header id="header">
 						<a href="index.html" class="logo">ALR Consulting Group</a>
-						<img src="ALR Consulting Group logo design.png" alt="ALR Consulting Group Logo" class="image fit">
+						<!--<img src="ALR Consulting Group logo design.png" alt="ALR Consulting Group Logo" class="image fit">-->
 						
 					</header>
 
@@ -226,6 +226,7 @@ ALR Consulting Group
 	</body>
 
 </html>
+
 
 
 
