--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ ALR Consulting Group
 										<h2><a href="#">Our Mission<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic05.png" alt="" /></a>
 									<p>At ALR Consulting Group, our mission is to deliver secure, scalable, 
       and innovative software solutions that empower businesses to grow.</p>
 									<ul class="actions special">
@@ -226,6 +226,7 @@ ALR Consulting Group
 	</body>
 
 </html>
+
 
 
 
