--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ ALR Consulting Group
 										<h2><a href="#">Values<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic06.png" alt="" /></a>
 									<p>We believe in integrity, customer focus, innovation, 
       and long-term partnerships built on trust and results.</p>
 									<ul class="actions special">
@@ -132,7 +132,7 @@ ALR Consulting Group
 										<h2><a href="#">Experience<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic07.png" alt="" /></a>
 									<p>Our team brings years of experience in software development, 
       cloud solutions, cybersecurity, and IT consulting across 
       multiple industries.</p>
@@ -226,6 +226,7 @@ ALR Consulting Group
 	</body>
 
 </html>
+
 
 
 
